--- a/app/src/main/res/menu/menu_diet_1_search.xml
+++ b/app/src/main/res/menu/menu_diet_1_search.xml
@@ -4,7 +4,7 @@
     tools:context="com.brus5.lukaszkrawczak.fitx.Diet.DietProductShowActivity">
     <item
         android:id="@+id/menu_search_product"
-        android:icon="@drawable/image_search"
+        android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/search"
         app:showAsAction="always" />
 </menu>
