--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,24 @@
         <item name="android:textColor">#FFF</item>
     </style>
 
+    <style name="roundButtonWithIcon">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:gravity">left|center</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#FFF</item>
+        <item name="android:drawablePadding">4dp</item>
+    </style>
+    <style name="roundButtonBorderless">
+        <item name="android:buttonStyle">@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
