Working on better look of TrainingDetailsActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="colorYellow">#fbff00</color>
     <color name="colorBlack">#000000</color>
     <color name="light_gray">#dbdbdb</color>
+    <drawable name="colorAccentTransparent">#960096f0</drawable>
 </resources>
