--- a/app/src/main/res/layout/row_training_excercise.xml
+++ b/app/src/main/res/layout/row_training_excercise.xml
@@ -13,7 +13,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/trainingExcerciseTitle"
@@ -21,10 +23,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginTop="8dp"
             android:text="@string/button_training_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            app:layout_constraintBaseline_toBaselineOf="@+id/trainingExcerciseCheckBox"
-            app:layout_constraintStart_toEndOf="@+id/trainingExcerciseCheckBox" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            app:layout_constraintStart_toEndOf="@+id/trainingExcerciseCheckBox"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!--    <CheckBox
         android:id="@+id/task_done"
@@ -48,20 +51,13 @@
             android:id="@+id/trainingExcerciseRestTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
             android:text="@string/s150"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/textView61"
-            app:layout_constraintTop_toTopOf="@+id/textView61" />
-
-        <TextView
-            android:id="@+id/textView61"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/text_view_rest_time"
-            app:layout_constraintStart_toEndOf="@+id/trainingExcerciseCheckBox"
-            app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle" />
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/trainingTimeStamp"
@@ -100,8 +96,9 @@
             android:checked="false"
             android:duplicateParentState="false"
             android:focusable="false"
+            app:layout_constraintBottom_toBottomOf="@+id/trainingExcerciseTitle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/trainingExcerciseTitle" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -110,34 +107,24 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="52dp" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/series"
-            app:layout_constraintBaseline_toBaselineOf="@+id/trainingExcerciseRestTime"
-            app:layout_constraintStart_toEndOf="@+id/divider" />
-
         <View
             android:id="@+id/divider"
-            android:layout_width="2dp"
+            android:layout_width="1dp"
             android:layout_height="10dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/colorAccentTransparent"
             app:layout_constraintBottom_toBottomOf="@+id/trainingExcerciseRestTime"
             app:layout_constraintStart_toEndOf="@+id/trainingExcerciseRestTime"
             app:layout_constraintTop_toTopOf="@+id/trainingExcerciseRestTime" />
 
         <View
             android:id="@+id/divider3"
-            android:layout_width="2dp"
+            android:layout_width="1dp"
             android:layout_height="10dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/colorAccentTransparent"
             app:layout_constraintBottom_toBottomOf="@+id/trainingExcerciseRestTime"
             app:layout_constraintStart_toEndOf="@+id/textViewSeriesNum"
             app:layout_constraintTop_toTopOf="@+id/trainingExcerciseRestTime" />
@@ -149,28 +136,20 @@
             android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
             android:text="@string/s15"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
-            app:layout_constraintStart_toEndOf="@+id/textView7" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/lifted"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSeriesNum"
-            app:layout_constraintStart_toEndOf="@+id/divider3" />
+            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
         <TextView
             android:id="@+id/textViewSumLiftedWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:text="@string/s120"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
-            app:layout_constraintStart_toEndOf="@+id/textView8" />
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
         <TextView
             android:id="@+id/textView14"
@@ -181,6 +160,39 @@
             android:text="@string/weight_short"
             app:layout_constraintBaseline_toBaselineOf="@+id/textViewSumLiftedWeight"
             app:layout_constraintStart_toEndOf="@+id/textViewSumLiftedWeight" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/trainingExcerciseCheckBox"
+            app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle"
+            app:srcCompat="@drawable/ic_access_alarm_grey_12dp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/divider"
+            app:layout_constraintStart_toEndOf="@+id/divider"
+            app:layout_constraintTop_toTopOf="@+id/divider"
+            app:srcCompat="@drawable/ic_repeat_black_12dp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/divider3"
+            app:layout_constraintStart_toEndOf="@+id/divider3"
+            app:layout_constraintTop_toTopOf="@+id/divider3"
+            app:srcCompat="@drawable/ic_fitness_center_grey_12dp" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
