--- a/app/src/main/res/layout/row_training_details_add.xml
+++ b/app/src/main/res/layout/row_training_details_add.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="@string/weight_short"
+        android:hint="@string/kg_short"
         android:inputType="numberSigned"
         android:nextFocusRight="@id/editTextTrainingRowReps"
         android:selectAllOnFocus="true"
